--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Git test</title>
 </head>
 <body>
-    Siemanko ;) 
-    Siemaneczko :P 
+    <p>elo elo elo : &#41; </p>
+
+    
 </body>
 </html>
